swagger/ルートの更新
